test/org/midica/testfiles/failing/opt-assigner-double.midica
INSTRUMENTS
	0    PERCUSSIVE_ORGAN       PERCUSSIVE_ORGAN
END

0  c  /4  v==100
